# bearings

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  keep-warm.yml
src/bearings/: api.py  cellprofile.py  cells.py  citywide.py  cli.py  config.py  factcheck.py  geocode.py  geosupport_geocode.py  mapgeo.py  profile.py  staleness.py  street_identity.py  transit.py
src/bearings/sources/: basemap.py  bedbugs.py  buildings.py  compstat.py  flood.py  gtfs.py  heat.py  hpd.py  neighborhoods.py  noise.py  overture.py  pluto.py  precincts.py  rodents.py  socrata.py  streets.py  trees.py
tests/: test_api.py  test_basemap.py  test_bedbugs.py  test_buildings.py  test_cellprofile.py  test_cells.py  test_citywide.py  test_compstat.py  test_factcheck.py  test_flood.py  test_geocode.py  test_geosupport_geocode.py  test_gtfs.py  test_heat.py  test_hpd.py  test_mapgeo.py  test_neighborhoods.py  test_noise.py  test_overture.py  test_pluto.py  test_precincts.py  test_profile.py  test_rodents.py  test_socrata.py  test_staleness.py  test_staleness_wiring.py  test_street_identity.py  test_streets.py  test_transit.py  test_trees.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  api.ts  main.tsx  types.ts
web/src/components/: AddressSearch.tsx  AmenitiesCard.tsx  BuildingCard.test.tsx  BuildingCard.tsx  CellReportView.test.tsx  CellReportView.tsx  ClaimCard.tsx  FactCheckView.tsx  GreenCard.tsx  Header.tsx  MapView.tsx  QuietCard.tsx  Stamp.tsx  (+8 more)
(+10 files in other folders)
